test/files/neg/macro-invalidusage-presuper-typemacros/Impls_1.scala
import scala.reflect.macros.Context

class C

object Impls {
  def impl(c: Context) = c.universe.Ident(c.universe.TypeName("C"))
}